# progect_gen

./: README.md  pyproject.toml  testproject.toml
project_gen/: main.py
project_gen/internal/: collector.py  test_generator.py
project_gen/my_templates/: cookiecutter.json
project_gen/my_templates/project/: cookiecutter.json
project_gen/my_templates/project/hooks/: post_gen_project.py
project_gen/my_templates/project/{{cookiecutter.project_slug}}/: .gitlab-ci.yml  README.md  bot.py  pyproject.toml  swagger-coverage-config-{{cookiecutter.project_slug}}.json  telegram-notifier-config.ini  testproject.toml
project_gen/my_templates/project/{{cookiecutter.project_slug}}/checkers/: checkers.py
project_gen/my_templates/project/{{cookiecutter.project_slug}}/tests/: conftest.py
project_gen/my_templates/python/: api.mustache  model_anyof.mustache  pyproject.mustache
project_gen/my_templates/python/asyncio/: rest.mustache
project_gen/my_templates/tests/: fixtures.jinja2  stg_env_template.jinja2  test.jinja2
project_gen/utils/: download.py  utils.py
