[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = [{ name="""{{ cookiecutter.authors.split(",")[0] | replace("'", '"') }}""", email="""{{ cookiecutter.authors.split(",")[1] | replace("'", '"') }}""" }]


readme = "README.md"
requires-python = ">=3.10,<4.0"
packages = []


[tool.poetry.dependencies]
    python = ">=3.10,<4.0"
    swagger-coverage = { git = "https://github.com/ValeriyMenshikov/swagger-coverage-py.git", rev="df26e0b5ca4e79403e1d14a1fdf58d4eecd29100" }
    swagger-coverage-py = "^2.1.2.2"
    aiohappyeyeballs = "2.4.4"
    aiohttp = "3.11.12"
    aiosignal = "1.3.2"
    allure-pytest = "2.15.0"
    allure-python-commons = "2.15.0"
    annotated-types = "0.7.0"
    anyio = "4.9.0"
    arrow = "1.3.0"
    assertpy = "1.1"
    asyncio = "3.4.3"
    attrs = "25.1.0"
    backoff = "2.2.1"
    certifi = "2024.12.14"
    charset-normalizer = "3.4.1"
    click = "8.1.8"
    colorama = "0.4.6"
    distconfig3 = "1.0.1"
    environs = "14.2.0"
    faker = "37.3.0"
    fqdn = "1.5.1"
    frozenlist = "1.5.0"
    gevent = "24.11.1"
    graphql-core = "3.2.6"
    greenlet = "3.1.1"
    grequests = "0.7.0"
    h11 = "0.16.0"
    harfile = "0.3.0"
    httpcore = "1.0.9"
    httpx = "0.28.1"
    hypothesis = "6.131.14"
    hypothesis-graphql = "0.11.1"
    hypothesis-jsonschema = "0.23.1"
    idna = "3.10"
    iniconfig = "2.1.0"
    isoduration = "20.11.0"
    jsonpointer = "3.0.0"
    jsonschema = "4.23.0"
    jsonschema-specifications = "2025.4.1"
    junit-xml = "1.9"
    markupsafe = "3.0.2"
    marshmallow = "4.0.0"
    multidict = "6.1.0"
    packaging = "25.0"
    pluggy = "1.5.0"
    propcache = "0.2.1"
    pydantic = "2.11.5"
    pydantic-core = "2.33.2"
    pyhamcrest = "2.1.0"
    pyrate-limiter = "3.7.0"
    pytelegrambotapi = "4.27.0"
    pytest = "8.3.5"
    pytest-subtests = "0.14.1"
    pytest-telegram-notifier = "1.4.0"
    python-dateutil = "2.9.0.post0"
    python-dotenv = "1.1.0"
    pyyaml = "6.0.2"
    referencing = "0.36.2"
    retrying = "1.3.4"
    rfc3339-validator = "0.1.4"
    rfc3987 = "1.3.8"
    rootpath = "0.1.0"
    rpds-py = "0.24.0"
    schemathesis = "3.39.16"
    setuptools = "78.1.0"
    six = "1.17.0"
    sniffio = "1.3.1"
    sortedcontainers = "2.4.0"
    starlette = "0.46.2"
    starlette-testclient = "0.4.1"
    structlog = "25.4.0"
    telebot = "0.0.5"
    toml = "0.10.2"
    tomli = "2.2.1"
    tomli-w = "1.2.0"
    types-python-dateutil = "2.9.0.20241206"
    typing-inspection = "0.4.1"
    typing-extensions = "4.13.2"
    tzdata = "2025.2"
    unicode = "2.9"
    uri-template = "1.3.0"
    urllib3 = "2.3.0"
    vyper-config = "1.2.1"
    watchdog = "6.0.0"
    webcolors = "24.11.1"
    werkzeug = "3.1.3"
    yarl = "1.18.3"
    zope-event = "5.0"
    zope-interface = "7.2"
    pytest-telegram = ">=1.2.1,<2.0.0"
    pytest-asyncio = ">=1.0.0,<2.0.0"
    curlify2 = ">=2.0.0,<3.0.0"
    types-assertpy = ">=1.1.0.20250502,<2.0.0.0"
datamodel-code-generator = "^0.34.0"
restcodegen = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
addopts = """
    --alluredir=./allure-results
"""
#    --telegram-notifier
#    --telegram-notifier-config-file=../telegram-notifier-config.ini

[tool.poetry.group.lint.dependencies]
ruff = "^0.12.2"
mypy = "^1.16.1"